# comp0034-wk9-complete

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/dash_app_uses_rest/: app_dash.py
src/dash_multi/: layout_charts.py  layout_events.py  multi_app.py
src/dash_multi/pages/: charts.py  events.py
src/flask_app_uses_rest/: __init__.py  app_flask.py
src/flask_iris/: __init__.py  config.py  run.py
src/paralympics_dash/: figures.py  layout_elements.py  paralympics_dash.py
src/paralympics_flask/templates/: navbar.html
tests/: conftest.py  test_dash_selenium.py  test_flask_iris.py  test_flask_selenium.py  test_paralympics_dash_selenium.py
tests/test_dash_multipage/: test_multi_page_app.py
tests/test_dash_with_rest/: conftest.py  test_dash_with_rest.py
tests/test_flask_with_rest/: conftest.py  test_flask_with_rest.py
tests/test_para_with_pytest_flask/: README.txt  conftest.py  test_paralympics_pytest_flask.py
tests/tests_iris/: conftest.py  test_iris_selenium.py
tests/tests_paralympics_dash/: test_paralympics_dash_selenium.py
tests/tests_paralympics_flask/: conftest.py  test_paralympics_pytest_flask.py  test_paralympics_selenium.py
