[project]
name = "comp0034-wk9-complete"
version = "1"
description = "Week 9 completed example"
dependencies = [
    # Ommitted - see requirements.txt
]

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
exclude = ["tests"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests",]